--- a/package.json
+++ b/package.json
@@ -1,27 +1,29 @@
 {
-  "name": "vite-typescript",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "packageManager": "pnpm@7.8.0",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "lint": "eslint",
+    "build": "vite-ssg build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@unocss/reset": "^0.50.4",
-    "eslint": "^8.36.0",
+    "element-plus": "^2.3.1",
     "markdown-it": "^13.0.1",
     "markdown-it-link-attributes": "^4.0.1",
     "markdown-it-shiki": "^0.8.0",
     "unocss": "^0.50.6",
-    "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^0.37.0",
     "@types/markdown-it-link-attributes": "^3.0.1",
     "@types/node": "^18.15.3",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vueuse/head": "^1.1.23",
+    "eslint": "^8.36.0",
     "typescript": "^4.9.3",
     "unplugin-auto-import": "^0.15.1",
     "unplugin-vue-components": "^0.24.1",
@@ -29,6 +31,8 @@
     "vite-plugin-pages": "^0.29.0",
     "vite-plugin-vue-layouts": "^0.8.0",
     "vite-plugin-vue-markdown": "^0.22.4",
+    "vite-ssg": "^0.22.1",
+    "vue-router": "^4.1.6",
     "vue-tsc": "^1.0.24"
   }
 }
